update shopping list objects (manytomany)
- use non-min js, for better debugging
- add task_fields to schedule to enable adding tasks
- update shopping list objects (manytomany) to work with updated django-knockout (did not finish), django-knockout doesn't support manytomany

--- a/demo_example/app/templates/app/base.html
+++ b/demo_example/app/templates/app/base.html
@@ -4,8 +4,8 @@
         <title>{% block title %}{% endblock %}Django Knockout</title>
 
         <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-debug.js'></script>
-        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.min.js'></script>
-        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout-pre-rendered/0.5.0/knockout-pre-rendered.min.js'></script>
+        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.js'></script>
+        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout-pre-rendered/0.8.0/knockout-pre-rendered.js'></script>
     </head>
     <body>
         {% block content %}{% endblock %}
