--- a/examples/without-django-rest-framework/app/templates/app/index.html
+++ b/examples/without-django-rest-framework/app/templates/app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <title>Without Django Rest Framework - Django Knockout</title>
+</head>
 <body>
 
     <div>
