support single object view models
- django-knockout will now output either the ViewModel or both ViewModel/ListViewModel depending on the result of ajax calls or via flags (disable_ajax_data/is_list), this reduces the output of unused code and the requirement for html list boilerplate for single object view models
- use model_object var as we don't know which VM will be used, this may change
- disable_ajax_data can be set at the bindings/knockout level for better control
- to avoid race condition of variable not being set, we need to wait for the ajax data before binding
- to avoid clobbering the same variable when knocking out the same model multiple times, the element_id is prepended and must now be a valid js variable name
- model_fields_var doesn't need to be mapped in the ajax call as it is mapped in the ViewModel

--- a/examples/with-django-rest-framework/app/templates/app/persons.html
+++ b/examples/with-django-rest-framework/app/templates/app/persons.html
@@ -35,7 +35,7 @@
 
     <p>Dynamic, every change can easily be tracked, but no Django template tag access</p>
 
-    <div id="personlistviewmodel">
+    <div id="person_object">
         <table>
             <thead>
                 <tr>
