--- a/examples/with-django-rest-framework/app/templates/app/persons_form.html
+++ b/examples/with-django-rest-framework/app/templates/app/persons_form.html
@@ -27,25 +27,22 @@
 
     <p>Dynamic, this method is for fine grain manipulation of form template (can also use KnockoutModelForm and skip using the data_bind templatetag)</p>
 
-    <div id="personviewmodel">
-        <form method="POST" data-bind="foreachInit: { data: persons, createElement: createPerson }">
+    <div id="person_object">
+        <form method="POST">
             {% csrf_token %}
-            <div data-template></div>
-            <div data-init>
-                {% for field in form %}
-                    <p>
-                        {{ field.errors }}
-                        {% if not field.is_hidden %}
-                            {{ field.label_tag }}
-                        {% endif %}
-                        {% data_bind field as data_bind %}
-                        {{ field|add_css:data_bind }}
-                    </p>
-                {% endfor %}
+            {% for field in form %}
                 <p>
-                    First Name (Duplicate): <input data-bind="value: first_name">
+                    {{ field.errors }}
+                    {% if not field.is_hidden %}
+                        {{ field.label_tag }}
+                    {% endif %}
+                    {% data_bind field as data_bind %}
+                    {{ field|add_css:data_bind }}
                 </p>
-            </div>
+            {% endfor %}
+            <p>
+                First Name (Duplicate): <input data-bind="value: first_name">
+            </p>
             <button type="submit">Submit</button>
         </form>
     </div>
@@ -55,26 +52,20 @@
     <p>Dynamic, default form rendering with KnockoutModelForm</p>
 
     <div id="automatic">
-        <form method="POST" data-bind="foreachInit: { data: persons, createElement: createPerson }">
+        <form method="POST">
             {% csrf_token %}
-            <div data-template></div>
-            <div data-init>
-                {{ knockout_form.as_p }}
-                <p>
-                    First Name (Duplicate): <input data-bind="value: first_name">
-                </p>
-            </div>
+            {{ knockout_form.as_p }}
+            <p>
+                First Name (Duplicate): <input data-bind="value: first_name">
+            </p>
             <button type="submit">Submit</button>
         </form>
     </div>
 
     <script type="text/javascript">
-        {% knockout_model person_class %}
-        {# how to handle viewmodels without array? #}
+        {% knockout person_class disable_ajax_data=True is_list=False %}
 
-        {% knockout_bindings person_class %}
-
-        {% knockout_bindings person_class element_id="automatic" %}
+        {% knockout_bindings person_class element_id="automatic" disable_ajax_data=True is_list=False %}
     </script>
 
 {% endblock content %}
