eliminate model_object var, refactor bindings
- knockout tag is applied to body if no element_id is provided
- to apply bindings multiple times the element_id must be specified for each tag, knockout tag now supports element_id
- error checking for missing context
- avoid passing/using model_object var, instead instantiate the vm directly with what's returned from ajax call
- define bind_function in view instead of template
- in order to return from ajax calls we need to chain a then instead of using success handler
- we can pass the data directly into list_view_model_class instead of using ko.mapping
- use done instead of then to end a chain to avoid swallowing errors
- throw Errors instead of strs

--- a/examples/with-django-rest-framework/app/templates/app/persons_form.html
+++ b/examples/with-django-rest-framework/app/templates/app/persons_form.html
@@ -27,7 +27,7 @@
 
     <p>Dynamic, this method is for fine grain manipulation of form template (can also use KnockoutModelForm and skip using the data_bind templatetag)</p>
 
-    <div id="person_object">
+    <div id="manual">
         <form method="POST">
             {% csrf_token %}
             {% for field in form %}
@@ -63,7 +63,7 @@
     </div>
 
     <script type="text/javascript">
-        {% knockout person_class disable_ajax_data=True is_list=False %}
+        {% knockout person_class element_id="manual" disable_ajax_data=True is_list=False %}
 
         {% knockout_bindings person_class element_id="automatic" disable_ajax_data=True is_list=False %}
     </script>
