--- a/examples/with-django-rest-framework/app/templates/app/persons.html
+++ b/examples/with-django-rest-framework/app/templates/app/persons.html
@@ -35,7 +35,7 @@
 
     <p>Dynamic, every change can easily be tracked, but no Django template tag access</p>
 
-    <div id="person_object">
+    <div>
         <table>
             <thead>
                 <tr>
