--- a/examples/without-django-rest-framework/app/templates/app/multiple_models.html
+++ b/examples/without-django-rest-framework/app/templates/app/multiple_models.html
@@ -1,124 +1,32 @@
+{% extends 'app/base.html' %}
+
 {% load knockout_tags %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js'></script>
-</head>
-<body>
+{% block title %}Multiple Objects - {% endblock %}
 
-<h1>Django</h1>
-<h2>Person</h2>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for person in persons %}
-        <tr>
-            <td>{{ person.id }}</td>
-            <td>{{ person.first_name }}</td>
-            <td>{{ person.last_name }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h2>Schedule</h2>
-<table>
-    <thead>
-        <tr>
-            <th>Task ID</th>
-            <th>Task</th>
-            <th>Day</th>
-            <th>Reminder</th>
-            <th>Reminder Type</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for task in schedule %}
-        <tr>
-            <td>{{ task.id }}</td>
-            <td>{{ task.task }}</td>
-            <td>{{ task.day.day }}</td>
-            <td>{{ task.reminder.reminder }}</td>
-            <td>{{ task.reminder.reminder_type.reminder_type }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h2>Shopping</h2>
-<table>
-    <thead>
-        <tr>
-            <th>Shopping List ID</th>
-            <th>Shopping List Name</th>
-            <th>Items</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for shopping_list in shopping_lists %}
-        <tr>
-            <td>{{ shopping_list.id }}</td>
-            <td>{{ shopping_list.name }}</td>
-            <td>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Item Name</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for item in shopping_list.items.all %}
-                        <tr>
-                            <td>{{ item.name }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h1>Knockout</h1>
-<h2>Person</h2>
-<div id="personviewmodel">
+{% block content %}
+
+    <h1>Django</h1>
+    <h2>Person</h2>
     <table>
         <thead>
             <tr>
                 <th>ID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Remove</th>
             </tr>
         </thead>
-        <tbody data-bind="foreach: persons">
+        <tbody>
+            {% for person in persons %}
             <tr>
-                <td><input data-bind="value: id" /></td>
-                <td><input data-bind='value: first_name, valueUpdate: "afterkeydown"' /></td>
-                <td><input data-bind="value: last_name" /></td>
-                <td><input data-bind="value: first_name" /></td>
-                <td><input data-bind="value: last_name" /></td>
-                <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
+                <td>{{ person.id }}</td>
+                <td>{{ person.first_name }}</td>
+                <td>{{ person.last_name }}</td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
-    Count: <span data-bind='text: persons().length'></span>
-    <button data-bind='click: addPerson'>Add a Person</button>
-    <button data-bind='click: sortPersonsAsc'>Sort Asc</button>
-    <button data-bind='click: sortPersonsDesc'>Sort Desc</button>
-</div>
-<script>
-    {{ persons|knockout }}
-</script>
-<h2>Schedule</h2>
-<div id="taskviewmodel">
+    <h2>Schedule</h2>
     <table>
         <thead>
             <tr>
@@ -127,85 +35,175 @@
                 <th>Day</th>
                 <th>Reminder</th>
                 <th>Reminder Type</th>
-                <th>Task</th>
-                <th>Day</th>
-                <th>Remove</th>
             </tr>
         </thead>
-        <tbody data-bind="foreach: tasks">
+        <tbody>
+            {% for task in schedule %}
             <tr>
-                <td><input data-bind="value: id" /></td>
-                <td><input data-bind='value: task, valueUpdate: "afterkeydown"' /></td>
-                <td><input data-bind="value: day.day" /></td>
-                <td><input data-bind="value: reminder.reminder" /></td>
-                <td><input data-bind="value: reminder.reminder_type.reminder_type" /></td>
-                <td><input data-bind="value: task" /></td>
-                <td><input data-bind="value: day.day" /></td>
-                <td><button data-bind='click: $root.removeTask'>Remove a Task</button></td>
+                <td>{{ task.id }}</td>
+                <td>{{ task.task }}</td>
+                <td>{{ task.day.day }}</td>
+                <td>{{ task.reminder.reminder }}</td>
+                <td>{{ task.reminder.reminder_type.reminder_type }}</td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
-    Count: <span data-bind='text: tasks().length'></span>
-    <button data-bind='click: addTask'>Add a Task</button>
-    <button data-bind='click: sortTasksAsc'>Sort Asc</button>
-    <button data-bind='click: sortTasksDesc'>Sort Desc</button>
-</div>
-<script>
-    {{ schedule|knockout }}
-</script>
-<h2>Shopping</h2>
-<div id="shoppingviewmodel">
+    <h2>Shopping</h2>
     <table>
         <thead>
             <tr>
                 <th>Shopping List ID</th>
-                <th>Name</th>
+                <th>Shopping List Name</th>
                 <th>Items</th>
-                <th>Name</th>
-                <th>Remove</th>
             </tr>
         </thead>
-        <tbody data-bind="foreach: shoppings">
+        <tbody>
+            {% for shopping_list in shopping_lists %}
             <tr>
-                <td><input data-bind="value: id" /></td>
-                <td><input data-bind='value: name, valueUpdate: "afterkeydown"' /></td>
+                <td>{{ shopping_list.id }}</td>
+                <td>{{ shopping_list.name }}</td>
                 <td>
                     <table>
                         <thead>
                             <tr>
-                                <th>Item ID</th>
                                 <th>Item Name</th>
-                                <th>Description</th>
-                                <th>Remove</th>
                             </tr>
                         </thead>
-                        <tbody data-bind="foreach: items">
+                        <tbody>
+                            {% for item in shopping_list.items.all %}
                             <tr>
-                                <td><input data-bind="value: id" /></td>
-                                <td><input data-bind="value: name" /></td>
-                                <td><input data-bind="value: description.description" /></td>
-                                <td><button data-bind='click: $parent.removeItem'>Remove an Item</button></td>
+                                <td>{{ item.name }}</td>
                             </tr>
+                            {% endfor %}
                         </tbody>
                     </table>
-                    Count: <span data-bind='text: items().length'></span>
-                    <button data-bind='click: addItem'>Add an Item</button>
-                    <button data-bind='click: sortItemsAsc'>Sort Asc</button>
-                    <button data-bind='click: sortItemsDesc'>Sort Desc</button>
                 </td>
-                <td><input data-bind="value: name" /></td>
-                <td><button data-bind='click: $root.removeShopping'>Remove a Shopping List</button></td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
-    Count: <span data-bind='text: shoppings().length'></span>
-    <button data-bind='click: addShopping'>Add a Shopping List</button>
-    <button data-bind='click: sortShoppingsAsc'>Sort Asc</button>
-    <button data-bind='click: sortShoppingsDesc'>Sort Desc</button>
-</div>
-<script>
-    {{ shopping_lists|knockout }}
-</script>
+    <h1>Knockout</h1>
+    <h2>Person</h2>
+    <div id="personviewmodel">
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: persons">
+                <tr>
+                    <td><input data-bind="value: id" /></td>
+                    <td><input data-bind='value: first_name, valueUpdate: "afterkeydown"' /></td>
+                    <td><input data-bind="value: last_name" /></td>
+                    <td><input data-bind="value: first_name" /></td>
+                    <td><input data-bind="value: last_name" /></td>
+                    <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
+                </tr>
+            </tbody>
+        </table>
+        Count: <span data-bind='text: persons().length'></span>
+        <button data-bind='click: addPerson'>Add a Person</button>
+        <button data-bind='click: sortPersonsAsc'>Sort Asc</button>
+        <button data-bind='click: sortPersonsDesc'>Sort Desc</button>
+    </div>
+    <script>
+        {{ persons|knockout }}
+    </script>
+    <h2>Schedule</h2>
+    <div id="taskviewmodel">
+        <table>
+            <thead>
+                <tr>
+                    <th>Task ID</th>
+                    <th>Task</th>
+                    <th>Day</th>
+                    <th>Reminder</th>
+                    <th>Reminder Type</th>
+                    <th>Task</th>
+                    <th>Day</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: tasks">
+                <tr>
+                    <td><input data-bind="value: id" /></td>
+                    <td><input data-bind='value: task, valueUpdate: "afterkeydown"' /></td>
+                    <td><input data-bind="value: day.day" /></td>
+                    <td><input data-bind="value: reminder.reminder" /></td>
+                    <td><input data-bind="value: reminder.reminder_type.reminder_type" /></td>
+                    <td><input data-bind="value: task" /></td>
+                    <td><input data-bind="value: day.day" /></td>
+                    <td><button data-bind='click: $root.removeTask'>Remove a Task</button></td>
+                </tr>
+            </tbody>
+        </table>
+        Count: <span data-bind='text: tasks().length'></span>
+        <button data-bind='click: addTask'>Add a Task</button>
+        <button data-bind='click: sortTasksAsc'>Sort Asc</button>
+        <button data-bind='click: sortTasksDesc'>Sort Desc</button>
+    </div>
+    <script>
+        {{ schedule|knockout }}
+    </script>
+    <h2>Shopping</h2>
+    <div id="shoppingviewmodel">
+        <table>
+            <thead>
+                <tr>
+                    <th>Shopping List ID</th>
+                    <th>Name</th>
+                    <th>Items</th>
+                    <th>Name</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: shoppings">
+                <tr>
+                    <td><input data-bind="value: id" /></td>
+                    <td><input data-bind='value: name, valueUpdate: "afterkeydown"' /></td>
+                    <td>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Item ID</th>
+                                    <th>Item Name</th>
+                                    <th>Description</th>
+                                    <th>Remove</th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach: items">
+                                <tr>
+                                    <td><input data-bind="value: id" /></td>
+                                    <td><input data-bind="value: name" /></td>
+                                    <td><input data-bind="value: description.description" /></td>
+                                    <td><button data-bind='click: $parent.removeItem'>Remove an Item</button></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        Count: <span data-bind='text: items().length'></span>
+                        <button data-bind='click: addItem'>Add an Item</button>
+                        <button data-bind='click: sortItemsAsc'>Sort Asc</button>
+                        <button data-bind='click: sortItemsDesc'>Sort Desc</button>
+                    </td>
+                    <td><input data-bind="value: name" /></td>
+                    <td><button data-bind='click: $root.removeShopping'>Remove a Shopping List</button></td>
+                </tr>
+            </tbody>
+        </table>
+        Count: <span data-bind='text: shoppings().length'></span>
+        <button data-bind='click: addShopping'>Add a Shopping List</button>
+        <button data-bind='click: sortShoppingsAsc'>Sort Asc</button>
+        <button data-bind='click: sortShoppingsDesc'>Sort Desc</button>
+    </div>
+    <script>
+        {{ shopping_lists|knockout }}
+    </script>
 
-</body>
-</html>
+{% endblock content %}
