--- a/examples/without-django-rest-framework/app/templates/app/persons_form.html
+++ b/examples/without-django-rest-framework/app/templates/app/persons_form.html
@@ -75,7 +75,7 @@
             last_name: null,
         };
 
-        {% knockout PersonClass %}
+        {% knockout PersonClass element_id="personlistviewmodel" %}
 
         {% knockout_bindings PersonClass element_id="automatic" %}
     </script>
