--- a/examples/without-django-rest-framework/app/templates/app/schedule.html
+++ b/examples/without-django-rest-framework/app/templates/app/schedule.html
@@ -64,9 +64,9 @@
         </table>
         <p>
             Count: <span data-bind='text: tasks().length'></span>
-            <button data-bind='click: addTask'>Add a Task</button>
-            <button data-bind='click: sortTasksAsc'>Sort Asc</button>
-            <button data-bind='click: sortTasksDesc'>Sort Desc</button>
+            <button data-bind='click: addTaskViewModel'>Add a Task</button>
+            <button data-bind='click: sortTaskViewModelsAsc'>Sort Asc</button>
+            <button data-bind='click: sortTaskViewModelsDesc'>Sort Desc</button>
         </p>
     </div>
 
