--- a/examples/without-django-rest-framework/app/templates/app/shopping.html
+++ b/examples/without-django-rest-framework/app/templates/app/shopping.html
@@ -97,8 +97,8 @@
         Count: <span data-bind='text: shoppings().length'></span>
         <!-- <button data-bind='click: addShopping'>Add a Shopping List</button> -->
         {# ### TODO: implement ManyToMany support ### #}
-        <button data-bind='click: sortShoppingsAsc'>Sort Asc</button>
-        <button data-bind='click: sortShoppingsDesc'>Sort Desc</button>
+        <button data-bind='click: sortShoppingViewModelsAsc'>Sort Asc</button>
+        <button data-bind='click: sortShoppingViewModelsDesc'>Sort Desc</button>
     </div>
 
     <script type="text/javascript">
