--- a/examples/without-django-rest-framework/app/templates/app/index.html
+++ b/examples/without-django-rest-framework/app/templates/app/index.html
@@ -6,25 +6,27 @@
 <body>
 
     <div>
-        <a href="{% url 'persons' %}">Persons Objects</a>
+        <a href="{% url 'app:persons' %}">Persons Objects</a>
         {% if not person %}
             Please create a person before using the UpdateView.
         {% else  %}
-            <a href="{% url 'persons_form' person.pk %}">Persons Form</a>
+            <a href="{% url 'app:persons_form' person.pk %}">Persons Form</a>
         {% endif %}
-        <a href="{% url 'persons_formset' %}">Persons Formset</a>
+        <a href="{% url 'app:persons_formset' %}">Persons Formset</a>
     </div>
     <br />
     <div>
-        <a href="{% url 'schedule' %}">Schedule Objects (ForeignKey)</a>
+        <a href="{% url 'app:schedule' %}">Schedule Objects (ForeignKey)</a>
     </div>
     <br />
     <div>
-        <a href="{% url 'shopping' %}">Shopping List Objects (ManyToMany)</a>
+        <a href="{% url 'app:shopping' %}">
+            Shopping List Objects (ManyToMany)
+    </a>
     </div>
     <br />
     <div>
-        <a href="{% url 'multiple_models' %}">Multiple Models Objects</a>
+        <a href="{% url 'app:multiple_models' %}">Multiple Models Objects</a>
     </div>
 
 </body>
